--- a/src/style/Home.less
+++ b/src/style/Home.less
@@ -285,3 +285,44 @@ body {
     font-size: 1rem;
     /* Kích thước chữ bình thường */
 }
+
+.fastest-user-container,
+.second-fastest-user-container,
+.third-fastest-user-container {
+    text-align: center;
+    /* Căn giữa nếu cần */
+    margin-top: 20px;
+    /* Khoảng cách giữa các phần tử */
+}
+
+.fastest-user,
+.second-fastest-user,
+.third-fastest-user {
+    color: red;
+    /* Màu đỏ */
+    font-weight: bold;
+    /* Đậm chữ */
+    font-size: 2rem;
+    /* Kích thước lớn gấp đôi */
+}
+
+.second-fastest-user-message,
+.third-fastest-user-message {
+    color: black;
+    /* Màu chữ đen */
+    font-size: 1.5rem;
+    /* Tăng kích thước font chữ */
+    font-weight: bold;
+    /* Đậm chữ */
+    margin-top: 10px;
+    /* Khoảng cách với dòng trước */
+}
+
+.time-message {
+    color: black;
+    /* Màu chữ đen */
+    margin-top: 10px;
+    /* Khoảng cách giữa fastestUser và time */
+    font-size: 1rem;
+    /* Kích thước chữ bình thường */
+}
