--- a/src/style/Home.less
+++ b/src/style/Home.less
@@ -362,3 +362,25 @@ body {
 .right {
     right: 0;
 }
+
+.fastest-user {
+    font-size: 2rem;
+    /* Làm cho font chữ lớn hơn */
+    font-weight: bold;
+    /* Làm cho chữ đậm hơn */
+    color: #ffcc00;
+    /* Màu sắc nổi bật */
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+    /* Tạo hiệu ứng bóng cho chữ */
+    padding: 10px;
+    /* Thêm khoảng cách quanh chữ */
+    background-color: #282c34;
+    /* Màu nền để nổi bật hơn */
+    border-radius: 8px;
+    /* Làm mềm các góc */
+    display: inline-block;
+    /* Giữ phần tử không chiếm full dòng */
+    margin-top: 10px;
+    /* Khoảng cách trên */
+    font-size: 90px;
+}
