--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -338,3 +338,9 @@ body {
   /* Khoảng cách trên */
   font-size: 90px;
 }
+.custom-title {
+  font-size: 5rem;
+  color: #f8ebcb;
+  margin-bottom: 30px;
+  /* or any size that suits your preference */
+}
