--- a/src/style/Home.less
+++ b/src/style/Home.less
@@ -384,3 +384,10 @@ body {
     /* Khoảng cách trên */
     font-size: 90px;
 }
+
+.custom-title {
+    font-size: 5rem;
+    color: #f8ebcb;
+    margin-bottom: 30px;
+    /* or any size that suits your preference */
+}
