--- a/src/style/ChangeName.less
+++ b/src/style/ChangeName.less
@@ -8,6 +8,7 @@ h2 {
 .form-control {
     border-radius: 5px;
     border: 1px solid #ccc;
+    padding: 0 100px 0 100px;
     /* Đường viền cho ô nhập */
 }
 
