--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -342,8 +342,12 @@ body {
   font-size: 90px;
 }
 .custom-title {
-  font-size: 4rem;
+  font-size: 3rem;
   color: #f8ebcb;
   margin-bottom: 30px;
   /* or any size that suits your preference */
+}
+.position-absolute .btn {
+  width: 150px;
+  height: 50px;
 }
