--- a/src/style/Home.less
+++ b/src/style/Home.less
@@ -390,8 +390,13 @@ body {
 }
 
 .custom-title {
-    font-size: 4rem;
+    font-size: 3rem;
     color: #f8ebcb;
     margin-bottom: 30px;
     /* or any size that suits your preference */
+}
+
+.position-absolute .btn {
+    width: 150px;
+    height: 50px;
 }
