--- a/src/style/Login.less
+++ b/src/style/Login.less
@@ -77,16 +77,31 @@
 }
 
 /* Trường nhập liệu */
-.form-control {
+.form-control-login {
     width: 100%;
     padding: 10px;
     margin-bottom: 15px;
     box-sizing: border-box;
-    text-align: center;
-    /* Căn giữa nội dung */
+    /* Không cần căn giữa nội dung */
     color: black;
-    /* Màu chữ đen */
+    border: 1px solid #ccc;
+    /* Đảm bảo có viền cho input */
+    border-radius: 4px;
+
+    padding: 0;
+    /* Bo góc nhẹ */
 }
+
+/* Cải thiện trạng thái focus */
+.form-control-login:focus {
+    border-color: #007bff;
+    /* Đổi màu viền khi focus */
+    outline: none;
+    /* Ẩn outline mặc định */
+    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+    /* Thêm bóng khi focus */
+}
+
 
 
 /* Nút đăng nhập */
@@ -150,4 +165,12 @@
     /* Bo góc nhẹ */
     color: #000;
     /* Màu chữ */
+}
+
+/* Định dạng cho placeholder */
+::placeholder {
+    color: #bbb;
+    /* Màu sắc của placeholder */
+    opacity: 1;
+    /* Đảm bảo độ mờ tối đa */
 }
