--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -348,6 +348,7 @@ body {
   /* or any size that suits your preference */
 }
 .position-absolute .btn {
-  width: 70px;
+  width: 50px;
   height: 30px;
+  font-size: small;
 }
