--- a/src/style/Home.less
+++ b/src/style/Home.less
@@ -401,3 +401,16 @@ body {
     height: 30px;
     font-size: small;
 }
+
+.position-absolute-login .btn {
+    width: 100px;
+    height: 30px;
+    font-size: small;
+}
+
+.user-greeting .dropdown-toggle {
+    width: 170px;
+    height: 30px;
+    font-size: normal;
+    font-weight: 600;
+}
