--- a/src/style/Login.css
+++ b/src/style/Login.css
@@ -71,27 +71,15 @@
   width: 100%;
 }
 /* Trường nhập liệu */
-.form-control-login {
+.form-control {
   width: 100%;
   padding: 10px;
   margin-bottom: 15px;
   box-sizing: border-box;
-  /* Không cần căn giữa nội dung */
+  text-align: center;
+  /* Căn giữa nội dung */
   color: black;
-  border: 1px solid #ccc;
-  /* Đảm bảo có viền cho input */
-  border-radius: 4px;
-  padding: 0;
-  /* Bo góc nhẹ */
-}
-/* Cải thiện trạng thái focus */
-.form-control-login:focus {
-  border-color: #007bff;
-  /* Đổi màu viền khi focus */
-  outline: none;
-  /* Ẩn outline mặc định */
-  box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
-  /* Thêm bóng khi focus */
+  /* Màu chữ đen */
 }
 /* Nút đăng nhập */
 .login-submit-button {
@@ -148,11 +136,4 @@
   /* Bo góc nhẹ */
   color: #000;
   /* Màu chữ */
-}
-/* Định dạng cho placeholder */
-::placeholder {
-  color: #bbb;
-  /* Màu sắc của placeholder */
-  opacity: 1;
-  /* Đảm bảo độ mờ tối đa */
 }
