--- a/src/style/Home.less
+++ b/src/style/Home.less
@@ -400,3 +400,14 @@ body {
     width: 150px;
     height: 50px;
 }
+
+
+.position-absolute .btn-login-home {
+    width: 120px;
+    height: 40px;
+}
+
+.position-absolute .btn-hello-home {
+    width: 200px;
+    height: 40px;
+}
