--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -348,8 +348,9 @@ body {
   /* or any size that suits your preference */
 }
 .position-absolute .btn {
-  width: 150px;
-  height: 50px;
+  width: 50px;
+  height: 30px;
+  font-size: small;
 }
 .position-absolute .btn-login-home {
   width: 120px;
