--- a/src/style/Home.less
+++ b/src/style/Home.less
@@ -397,8 +397,9 @@ body {
 }
 
 .position-absolute .btn {
-    width: 150px;
-    height: 50px;
+    width: 50px;
+    height: 30px;
+    font-size: small;
 }
 
 
