--- a/src/style/Home.less
+++ b/src/style/Home.less
@@ -412,3 +412,35 @@ body {
     width: 200px;
     height: 40px;
 }
+
+.position-absolute {
+    position: absolute;
+}
+
+
+
+.position-absolute .left {
+    left: 0;
+}
+
+.position-absolute .center {
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.position-absolute .right {
+    right: 0;
+}
+
+.position-absolute .top {
+    top: 0;
+}
+
+.position-absolute .middle {
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.position-absolute .bottom {
+    bottom: 0;
+}
