--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -347,6 +347,13 @@ body {
   margin-bottom: 30px;
   /* or any size that suits your preference */
 }
+.dkt-title {
+  font-size: 6rem;
+  color: hsl(59, 100%, 50%);
+  margin-bottom: 30px;
+  margin-top: -80px;
+  /* or any size that suits your preference */
+}
 .position-absolute .btn {
   width: 50px;
   height: 30px;
