--- a/src/style/Home.less
+++ b/src/style/Home.less
@@ -396,6 +396,15 @@ body {
     /* or any size that suits your preference */
 }
 
+.dkt-title {
+    font-size: 6rem;
+
+    color: hsl(59, 100%, 50%);
+    margin-bottom: 30px;
+    margin-top: -80px;
+    /* or any size that suits your preference */
+}
+
 .position-absolute .btn {
     width: 50px;
     height: 30px;
